--- a/src/app/repo/repo.component.scss
+++ b/src/app/repo/repo.component.scss
@@ -90,6 +90,11 @@
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.2);
     font-family: lato;
     padding: 9px;
+    transition: all .2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     .contributor-data {
       display: flex;
